fix: ユーザー情報取得処理修正、UserRepositoryのsaveメソッド改善
Changes:
1. ユーザー情報取得レスポンスにhasPasswordプロパティを追加
2. ユーザー情報取得レスポンスからIDとプロバイダー側ユーザーIDを削除
3. UserRepositoryのsaveメソッド改善

Reason:
1. フロントエンド側でパスワードが設定済みかどうかの判断ができないため
2. 必要ない上、セキュリティリスクにつながるため
3. OIDCログインするたびにuser_auth_providersテーブルの該当レコードを削除して挿入をしていたが、挿入がうまくされていなかった。加えてSQL等が複雑すぎるため改善

BREAKING CHANGE: N/A
Related: N/A
Refs: #16